--- a/admin/themes/default/fontello/demo.html
+++ b/admin/themes/default/fontello/demo.html
@@ -229,11 +229,11 @@ body {
 }
 @font-face {
       font-family: 'fontello';
-      src: url('./font/fontello.eot?84658552');
-      src: url('./font/fontello.eot?84658552#iefix') format('embedded-opentype'),
-           url('./font/fontello.woff?84658552') format('woff'),
-           url('./font/fontello.ttf?84658552') format('truetype'),
-           url('./font/fontello.svg?84658552#fontello') format('svg');
+      src: url('./font/fontello.eot?91125183');
+      src: url('./font/fontello.eot?91125183#iefix') format('embedded-opentype'),
+           url('./font/fontello.woff?91125183') format('woff'),
+           url('./font/fontello.ttf?91125183') format('truetype'),
+           url('./font/fontello.svg?91125183#fontello') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -407,8 +407,8 @@ body {
       </div>
       <div class="row">
         <div class="the-icons span3" title="Code: 0xe83a"><i class="demo-icon icon-link-1">&#xe83a;</i> <span class="i-name">icon-link-1</span><span class="i-code">0xe83a</span></div>
-        <div class="the-icons span3" title="Code: 0xe83b"><i class="demo-icon icon-user-minus">&#xe83b;</i> <span class="i-name">icon-user-minus</span><span class="i-code">0xe83b</span></div>
         <div class="the-icons span3" title="Code: 0xe83b"><i class="demo-icon icon-th-large">&#xe83b;</i> <span class="i-name">icon-th-large</span><span class="i-code">0xe83b</span></div>
+        <div class="the-icons span3" title="Code: 0xe83c"><i class="demo-icon icon-user-minus">&#xe83c;</i> <span class="i-name">icon-user-minus</span><span class="i-code">0xe83c</span></div>
         <div class="the-icons span3" title="Code: 0xe83c"><i class="demo-icon icon-user-1">&#xe83c;</i> <span class="i-name">icon-user-1</span><span class="i-code">0xe83c</span></div>
       </div>
       <div class="row">
